apps/production/adguard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adguard-http
  namespace: adguard
spec:
  hostnames:
    - adguard.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http-internal
  rules:
    - backendRefs:
      - name: adguard
        port: 8080
